[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/keycast.gd" type="Script" id=1]
[ext_resource path="res://dynamicFont/regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://image/UI side/icons/keycast/normal.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="main" type="Control"]
anchor_left = 0.248
anchor_top = 0.5
anchor_right = 0.248
anchor_bottom = 0.5
margin_left = -257.952
margin_top = -304.0
margin_right = 0.0479889
mouse_filter = 2
script = ExtResource( 1 )

[node name="spaceBt" type="Panel" parent="."]
margin_left = 62.0
margin_top = 192.0
margin_right = 132.0
margin_bottom = 227.0
rect_min_size = Vector2( 70, 35 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="spaceBt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "space"
align = 1
valign = 1

[node name="shiftBt" type="Panel" parent="."]
margin_left = 173.0
margin_top = 191.0
margin_right = 243.0
margin_bottom = 226.0
rect_min_size = Vector2( 70, 35 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="shiftBt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "shift"
align = 1
valign = 1

[node name="ctrlBt" type="Panel" parent="."]
margin_left = 63.0
margin_top = 258.0
margin_right = 133.0
margin_bottom = 293.0
rect_min_size = Vector2( 70, 35 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="ctrlBt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "ctrl"
align = 1
valign = 1

[node name="altBt" type="Panel" parent="."]
margin_left = 175.0
margin_top = 261.0
margin_right = 245.0
margin_bottom = 296.0
rect_min_size = Vector2( 70, 35 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="altBt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "alt"
align = 1
valign = 1

[node name="mouseImg" type="TextureRect" parent="."]
margin_left = 133.0
margin_top = 216.0
margin_right = 172.0
margin_bottom = 273.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="labelHolder" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 183.0
mouse_filter = 2
alignment = 2
